# study

./: README.md  myhead.h  链表题1.md
1-变量字符串输入输出/: 1-原来!4的意思是假.c  13-scanf的问题3.c  3-取出每个位的数字.c
10-数据与结构/: 1-单向非循环链表.c  10.listlist_for_each_entry_safe_del的使用.c  11.0list_for_each的使用.c  12.练习使用内核链表保存图片路进.c  13.顺序栈的实现.c  15.作业内核链表实现图书系统管理.c  19图的基本存储.c  1顺序表的基本操作实现.c  2.单链表的基本操作.c  22-如何得到linux的系统时间.c  24图的存储和表的深度优先遍历的实现.c  3-双向非循环链表.c  3-队列实现自助结账系统.c  3.单向循环链表实现.c  34-BST.c  3直接插入排序.c  4.双向链表的实现.c  4快排算法.c  7.内核链表的接口函数使用.c  插入排序.c
2-循环/: 1被6整除练习题.c  3作业2打印乘法表.c  6第一次学switch循环.c  7打印星星.c  9作业1算完数.c
2-文件io学习/: 1.open打开文件.c  10.练习2只读的方式打开文件,写入会失败.c  10.练习3拷贝文件.c  101bmp显示.c  102-获取指定后缀名的文件.c  103-fprintf.c  104-sprintf.c  105-内存映射.c  11.stat判断文件的权限.c  12.chmod修改文件的权限.c  12.fw和fr拷贝文件.c  13.access判断文件是否存在.c  13fprintf.c  14.lseek设置读写偏移.c  14.判断用户名是否存在.c  15.lseek设置偏移,写入文件.c  16.lseek往前往后偏移.c  17.练习打开目录读取判断文件类型.c  18.lseek反复调用.c  18递归读取子目录.c  19.lseek求文件大小.c  2.open新建文件.c  21.sprintf拼接字符串.c  3-获取内存.c  3.open新建文件并且设置权限.c  4.fseek返回值,ftell返回当前位置距离起始位置的字节数.c  4.文件的读取.c  5-试一下从后往前度.c  5.文件描述符的特点2.c  5.文件描述符的特点3.c  6.read多次读取2.c  7月31作业1判断用户名是否存在.c  (+3 more)
一些杂碎/cmake学习/Code/: CMakeLists.txt
一些杂碎/cmake学习/Code/inc/: bmp.h  dir.h  dlist.h  lcd.h  log.h  main.h  mfont.h  touch.h
一些杂碎/cmake学习/Code/res/: game_name.txt  left_team_name.txt  player_left.txt  player_right.txt  right_team_name.txt
一些杂碎/cmake学习/Code/src/: GameInformation.c  adShow.c  bmp.c  bst.c  countTime.c  dir.c  dlist.c  font.c  hehe  lcd.c  log.c  main.c  makefile  mfont.c  scoreShow.c  siu  siu - 副本  touch.c  truetype.c
(+512 files in other folders)
